--- a/css/Barre.css
+++ b/css/Barre.css
@@ -7,6 +7,7 @@
     gap: 57px;
 
     position: absolute;
+    z-index: 9;
     height: 30px;
     left: 0px;
     right: 0px;
@@ -39,6 +40,8 @@
     text-decoration: none;
 
     transition: color 0.4s linear;
+    -webkit-user-select: none;
+    user-select: none;
 
 
 }
