--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,27 @@ body{
 
     background: #CFD5FF;
 
-    padding-top: 85px;
+    padding-top: 95px;
 }
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 @media screen and (max-width: 800px) {
     body{
-        padding-top: 75px;
+        padding-top: 85px;
+    }
+
+    .main {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
     
 }
