--- a/css/Barre.css
+++ b/css/Barre.css
@@ -74,11 +74,10 @@
     }
 
     .barre a {
-        width: 50%;
         flex-direction: row;
         align-items: center;
         gap: 57px;
-        justify-content: start;
+        justify-content: center;
         display: none;
     }
 
@@ -103,15 +102,16 @@
 
     .showMenu a {
         display: flex !important;
+        align-items: start;
     }
 
     .showMenu {
-
         height: calc(100vh - (26px + 12vh)) !important;
         border-radius: 0px !important;
         padding-bottom: 12vh !important;
-
     }
+
+
     .showMenu .toggle {
         padding-bottom: 0 !important;
     }
