--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,22 @@
 body{
 
     background: #CFD5FF;
-    overflow: hidden;
     padding-top: 95px;
 
 }
 
 .main {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 20px;
+}
+.main > div {
+    width: 100%;
+    height: 100%;
+
 }
 
 
@@ -21,7 +27,7 @@ body{
 
     .main {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
