--- a/css/caroussel.css
+++ b/css/caroussel.css
@@ -5,14 +5,25 @@
 }
 .main-carousel{
     height: 500px;
-    width: 50%;
+    flex: 1;
     border-radius: 10px;
 }
 .carousel-cell{
+    overflow: hidden; /* cache les images trop grandes */
     width: 100%;
     height: 100%;
     /* centre les images */
     display: flex;
     align-items:center;
     justify-content: center;
+}
+
+@media screen and (max-width: 800px){
+    .flickity-page-dots {
+        display: none;
+    }
+    .main-carousel{
+        padding: 0;
+    }
+    
 }
