--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,16 @@ body{
 
 }
 
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 50px;
+}
 
 @media screen and (max-width: 800px) {
     body{
@@ -30,6 +40,17 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 50px;
     }
     
 }
