--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,3 @@
-body {
-    background-color: #B5BADF;
-}
-
-
 .photo{
     display: flex;
         }
@@ -20,11 +15,41 @@ body {
 }
 
 .image_SAM img{
-    width: 150px;
+    width: 100px;
     height: 150px;
 }
 
 .image_SIO img{
     width: 150px;
     height: 150px;
+}
+
+@media screen and (max-width: 800px) {
+    .photo{
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .photo > div > div {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        flex-direction: column;
+    }
+    .photo > div > div > p {
+        padding-right:0px ;
+    }
+    
+.image_SAM img{
+    width: 100px;
+    height: 100px;
+}
+
+.image_SIO img{
+    width: 100px;
+    height: 100px;
+}
 }
