correction bug responsive

--- a/css/Barre.css
+++ b/css/Barre.css
@@ -14,7 +14,7 @@
     top: 0px;
 
     background: #FFFFFF;
-    box-shadow: 4px 6px 6px #9BA0BF;
+    box-shadow: 4px 6px 6px #00000053;
     border-radius: 0px 0px 50px 50px;
 
     transition: height 0.5s;
